{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 43,
  "lineage": "07c62439-5553-f756-10c2-7b8bd8bfa89b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-043efcd2d3f5f9f67",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e5a5d56781274b34"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060d40aae190de62c",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-065b9ff42ffab5c60",
            "domain": "vpc",
            "id": "eipalloc-060d40aae190de62c",
            "instance": "i-05ceea0fda0671509",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02c303bfd8b6d3d54",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-20-110-61.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.110.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.example-gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff39345bd62c82a5",
            "arn": "arn:aws:ec2:us-east-2:684756654540:instance/i-05ceea0fda0671509",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ceea0fda0671509",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02c303bfd8b6d3d54"
              }
            ],
            "primary_network_interface_id": "eni-02c303bfd8b6d3d54",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "3.20.110.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e893ddb6f4857349",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02742ed4e05a2f0b7",
            "tags": {
              "Name": "webserver"
            },
            "tags_all": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2801780efe15aa1"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:684756654540:internet-gateway/igw-0ce37c46db6904846",
            "id": "igw-0ce37c46db6904846",
            "owner_id": "684756654540",
            "tags": {
              "Name": "example-gateway"
            },
            "tags_all": {
              "Name": "example-gateway"
            },
            "vpc_id": "vpc-0e5a5d56781274b34"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:684756654540:network-interface/eni-02c303bfd8b6d3d54",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c03e81168bd87cb8",
                "device_index": 0,
                "instance": "i-05ceea0fda0671509"
              }
            ],
            "id": "eni-02c303bfd8b6d3d54",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:9a:7c:9d:b5:02",
            "owner_id": "684756654540",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d2801780efe15aa1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02742ed4e05a2f0b7"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:684756654540:route-table/rtb-04cab0723a7102e39",
            "id": "rtb-04cab0723a7102e39",
            "owner_id": "684756654540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-043efcd2d3f5f9f67",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0ce37c46db6904846",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5a5d56781274b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.example",
            "aws_internet_gateway.example-gw",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0230fc1fd3dcc2531",
            "route_table_id": "rtb-04cab0723a7102e39",
            "subnet_id": "subnet-02742ed4e05a2f0b7"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.example",
            "aws_internet_gateway.example-gw",
            "aws_route_table.example-route-table",
            "aws_subnet.subnet1",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:684756654540:security-group/sg-0d2801780efe15aa1",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2801780efe15aa1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "684756654540",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5a5d56781274b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:684756654540:subnet/subnet-02742ed4e05a2f0b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02742ed4e05a2f0b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "684756654540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-subnet"
            },
            "tags_all": {
              "Name": "example-subnet"
            },
            "vpc_id": "vpc-0e5a5d56781274b34"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:684756654540:vpc/vpc-0e5a5d56781274b34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09feeea152b1783f7",
            "default_route_table_id": "rtb-0ab8ac96d98b5fcdd",
            "default_security_group_id": "sg-0ddca700d3f7cd755",
            "dhcp_options_id": "dopt-0ed4071f5b779bb98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5a5d56781274b34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab8ac96d98b5fcdd",
            "owner_id": "684756654540",
            "tags": {
              "Name": "example-vpc"
            },
            "tags_all": {
              "Name": "example-vpc"
            }
          }
        }
      ]
    }
  ]
}